# umbra

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/browser-extension/: README.md
apps/desktop/: README.md
apps/mobile/: README.md
crates/umbra-auth/: Cargo.toml
crates/umbra-auth/src/: lib.rs
crates/umbra-cli/: Cargo.toml
crates/umbra-cli/src/: cache.rs  commands.rs  config.rs  crypto_state.rs  error.rs  http.rs  interactive.rs  item_plaintext.rs  keys.rs  main.rs  opaque.rs  output.rs  sync.rs  tests.rs  unlock_store.rs
crates/umbra-core/: Cargo.toml
crates/umbra-core/src/: lib.rs
crates/umbra-crypto/: Cargo.toml
crates/umbra-crypto/src/: lib.rs
crates/umbra-migrations/: Cargo.toml
crates/umbra-migrations/migrations/: 000001_initial_schema.sql  000002_org_access_and_key_rotation.sql  000003_signed_sessions.sql  000004_vault_access_revision.sql  000005_device_trust_state.sql
crates/umbra-migrations/sqlite/: 000001_initial_schema.sql  000002_org_access_and_key_rotation.sql  000003_signed_sessions.sql  000004_vault_access_revision.sql  000005_device_trust_state.sql
crates/umbra-migrations/src/: lib.rs
crates/umbra-protocol/: Cargo.toml
crates/umbra-protocol/src/: lib.rs
crates/umbra-server/: Cargo.toml  Dockerfile
crates/umbra-server/src/: authz.rs  cli.rs  config.rs  error.rs  http.rs  main.rs  server.rs  signed_auth.rs  state.rs  tests.rs  util.rs
crates/umbra-storage/: Cargo.toml
crates/umbra-storage/src/: audit.rs  backend.rs  convert.rs  devices.rs  error.rs  items.rs  lib.rs  models.rs  orgs.rs  sessions.rs  tests.rs  users.rs  vaults.rs
crates/umbra-storage/src/postgres/: audit.rs  convert.rs  devices.rs  items.rs  mod.rs  orgs.rs  sessions.rs  users.rs  vaults.rs
crates/umbra-storage/src/sqlite/: audit.rs  convert.rs  devices.rs  items.rs  mod.rs  orgs.rs  sessions.rs  users.rs  vaults.rs
docker/postgres/: init-test-db.sql
docs/: architecture.md  crypto.md  distribution.md  migrations.md  protocol.md  threat-model.md
docs/decisions/: 0001-crypto-suite.md  0002-monorepo.md  0003-migrations.md  0004-vault-key-model.md  0005-postgres-schema.md  0006-org-vault-access-and-rotation.md
docs/superpowers/plans/: 2026-06-13-remote-cli-item-sync.md  2026-06-13-signed-http-friendly-cli.md  2026-06-14-cli-real-crypto-items.md  2026-06-14-cli-sqlite-cache.md  2026-06-17-smart-sync-cli-flow.md  2026-06-19-local-unlock-keychain.md  2026-06-20-cli-usability-pass.md  2026-06-21-cli-interactive-selection.md  2026-06-28-multi-device-trust.md  2026-06-29-server-sqlite-backend.md  2026-06-30-emergency-kit-clean-recovery.md
docs/superpowers/specs/: 2026-06-28-multi-device-trust-design.md
