[workspace]
members = [
    "crates/umbra-auth",
    "crates/umbra-cli",
    "crates/umbra-core",
    "crates/umbra-crypto",
    "crates/umbra-migrations",
    "crates/umbra-protocol",
    "crates/umbra-server",
    "crates/umbra-storage",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mi66mc/umbra"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
argon2 = { version = "0.5", features = ["zeroize"] }
axum = "0.7"
base64ct = { version = "1", features = ["alloc"] }
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
opaque-ke = { version = "4.1.0-pre.1", default-features = true, features = ["argon2", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serial_test = "3"
uuid = { version = "1", features = ["serde", "v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
