[package]
name = "umbra-auth"
description = "Umbra HTTP request authentication helpers."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64ct.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
