[package]
name = "umbra-cli"
description = "Command line client for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "umbra"
path = "src/main.rs"

[dependencies]
umbra-core = { path = "../umbra-core" }
umbra-protocol = { path = "../umbra-protocol" }
