[package]
name = "umbra-cli"
description = "Command line client for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "umbra"
path = "src/main.rs"

[dependencies]
clap.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
umbra-core = { path = "../umbra-core" }
umbra-protocol = { path = "../umbra-protocol" }
uuid.workspace = true
