[package]
name = "umbra-cli"
description = "Command line client for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "umbra"
path = "src/main.rs"

[dependencies]
base64ct.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
umbra-auth = { path = "../umbra-auth" }
umbra-core = { path = "../umbra-core" }
umbra-protocol = { path = "../umbra-protocol" }
uuid.workspace = true
