[package]
name = "umbra-crypto"
description = "Client-side cryptographic primitives and envelopes for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
umbra-core = { path = "../umbra-core" }
