[package]
name = "umbra-crypto"
description = "Client-side cryptographic primitives and envelopes for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
base64ct.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
umbra-core = { path = "../umbra-core" }
x25519-dalek.workspace = true
zeroize.workspace = true
