[package]
name = "umbra-protocol"
description = "Umbra API and sync protocol types."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
umbra-core = { path = "../umbra-core" }
uuid.workspace = true
