[package]
name = "umbra-server"
description = "HTTP server for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "umbra-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64ct.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
opaque-ke.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
umbra-core = { path = "../umbra-core" }
umbra-migrations = { path = "../umbra-migrations" }
umbra-protocol = { path = "../umbra-protocol" }
umbra-storage = { path = "../umbra-storage" }
uuid.workspace = true

[dev-dependencies]
serial_test.workspace = true
