[package]
name = "umbra-storage"
description = "Database access layer for Umbra."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
umbra-core = { path = "../umbra-core" }
uuid.workspace = true

[dev-dependencies]
serial_test.workspace = true
umbra-migrations = { path = "../umbra-migrations" }
